# heimdall

./: .gitlab-ci.yml  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SPECS.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release-assets.yml  release-please.yml
.serena/: project.yml
.serena/memories/: password-bootstrap-implementation.md
.serena/memories/bootstrap/docker/: implementation.md
scripts/: install.sh
src/: main.rs
src/cli/: mod.rs
src/commands/: bootstrap.rs  mod.rs  verify.rs
src/config/: mod.rs
src/core/: doctor.rs  elevation.rs  mod.rs  operation.rs  validation.rs
src/features/: mod.rs
src/features/bootstrap/: mod.rs
src/features/bootstrap/docker/: command.rs  execute.rs  generate.rs  human.rs  input.rs  plan.rs  report.rs  validate.rs
src/features/bootstrap/flux/: command.rs  execute.rs  human.rs  input.rs  keygen.rs  mod.rs  plan.rs  report.rs  validate.rs
src/features/bootstrap/infisical/: command.rs  execute.rs  generate.rs  human.rs  input.rs  plan.rs  report.rs  (+1 more)
src/features/doctor/: command.rs  human.rs  mod.rs  registry.rs  report.rs
src/features/operations/: mod.rs  package.rs
src/features/service/: infisical.rs  komodo.rs  mod.rs  netbird.rs
src/features/update/: checksum.rs  command.rs  execute.rs  human.rs  input.rs  mod.rs  package.rs  report.rs
src/modules/: doctor.rs  mod.rs  user_bootstrap.rs
src/output/: human.rs  mod.rs  style.rs
src/runner/: executor.rs  mod.rs  read.rs  sudo.rs  write.rs
src/runtime/: mod.rs  privilege_reexec.rs
(+68 files in other folders)
