[package]
name = "heimdall"
version = "1.2.1"
edition = "2024"
rust-version = "1.94"
license = "MIT"
description = "Modular CLI for bootstrap, harden, and verify workflows."
repository = "https://github.com/futharkd/heimdall"

[[bin]]
name = "heimdall"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
inquire = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3"
